--- a/index.html
+++ b/index.html
@@ -333,9 +333,10 @@ $(document).ready(function () {
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p><img src="images/emily_2.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left"></p>
-<p>I like to analyze data to answer research questions and test hypotheses. Currently I investigate questions related to breast cancer through my work as a Research Biostatistician at <a href="https://www.mskcc.org/departments/epidemiology-biostatistics">Memorial Sloan Kettering Cancer Center</a> in the department of Epidemiology &amp; Biostatistics.</p>
-<p>I graduated from the <a href="http://www.sph.umn.edu/academics/divisions/biostatistics/">University of Minnesota</a> with a MS in biostatistics in 2010. In 2012 I began working toward my DrPH in biostatistics as a part-time student at <a href="https://www.mailman.columbia.edu/become-student/departments/biostatistics">Columbia University</a>, where I am investigating statistical methods for the study of etiologic heterogeneity in epidemiologic studies under the advisement of <a href="https://www.mailman.columbia.edu/people/our-faculty/sw2206">Dr. Shuang Wang</a> at Columbia University and <a href="https://www.mskcc.org/profile/colin-begg">Dr. Colin Begg</a> at Memorial Sloan Kettering Cancer Center. I expect to graduate by the end of 2018.</p>
-<p>I am a well-known R enthusiast, including serving on the board and being an active member of <a href="http://www.rladiesnyc.org/">R Ladies NYC</a>.</p>
+<p>I am a result oriented individual with strengths in Nano-Optics and Photonics. I am interested in the field of data science and applying it to the field of Optics. Will help technology professionals and their team to design future generations of revolutionary products.</p>
+<p>Currently, I am involved in the design, simulation and analysis of complex plasmonic structures, which have novel applications in field of Optics and communications.</p>
+<p>Key skills - Computer Simulations and Data Analysis - Project Management - Team management - Writing and Editing</p>
+<p>I believe, my existing skills and knowledge can add value in the Corporate Function Research and Technology.</p>
 <p>My full CV is available <a href="files/Zabor_CV_2017_Q4.pdf">here</a>.</p>
 
 
